added Fischer from PAT, modified some other examples
git-svn-id: https://svn.lsv.ens-cachan.fr/kuehne/projects/IMITATOR2/branches/pta@610 6f1578d2-a1e8-4f7d-a79a-10a3a1991f00

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -1861,6 +1861,7 @@ We define each of those two components below.
 	$|$ & \code{=} \\
 	$|$ & \code{>=} \\
 	$|$ & \code{>} \\
+	$|$ & \code{<>} \\
 \end{tabular}
 
 %------------------------------------------------------------
